# OCMS_Toolkit

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: bump_version_on_pr.yml  tag_on_merge.yml  unit_tests.yml  validate_PR_label.yml
ocmstoolkit/: .gitignore  new_project.py  ocms_toolkit.py  pipeline_countlines.py  pipeline_fastqc.py  pipeline_sra.py  pipeline_subsample.py  pipeline_zstd_compression.py  rename_and_link.py  slurm-50637230.out  slurm-50637231.out  slurm-50637232.out  slurm-50637237.out  slurm-50637242.out  slurm-50637247.out  slurm-50637248.out
ocmstoolkit/modules/: Sra.py  Utility.py
ocmstoolkit/pipeline_countlines/: pipeline.yml
ocmstoolkit/pipeline_fastqc/: pipeline.yml
ocmstoolkit/pipeline_sra/: pipeline.yml
ocmstoolkit/pipeline_subsample/: pipeline.yml
ocmstoolkit/pipeline_zstd_compression/: pipeline.yml
ocmstoolkit/scripts/: countlines.py  fastq2filteredfastq.py  new_project.py  rename_and_link.py  taxid2taxonomy.py
ocmstoolkit/tests/: test_get_fastns.py
ocmstoolkit/tests/unit/: test_basetool.py  test_get_fastns.py  test_metabam.py  test_metafastn.py
ocmstoolkit/tests/unit_tests/: test_basetool.py  test_get_fastns.py  test_metabam.py  test_metafastn.py  test_relink.py
