[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocms_toolkit"
version = "1.0.1"
description = "OCMS_Toolkit: Oxford Centre for Microbiome Studies bioinformatic scripts"
readme = "README.md"
requires-python = ">=3.8.2"
license = {text = "MIT"}
keywords = ["OCMS", "bioinformatics", "python", "microbiome", "fastqc", "sra"]
authors = [
    {name = "Sandi Yen"},
    {name = "Nicholas Ilott"},
    {name = "Jethro Johnson"}
]
maintainers = [
    {name = "Sandi Yen"},
    {name = "Nicholas Ilott"},
    {name = "Jethro Johnson"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: BioInformatics",
    "Operating System :: POSIX :: Linux",
]

# Core dependencies
dependencies = [
    "cgatcore>=0.6.0",
    "ruffus>=2.8.0",
    "pyyaml>=5.1",
    "gevent",
    "SQLAlchemy",
    "apsw",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/OxfordCMS/OCMS_Toolkit"
Repository = "https://github.com/OxfordCMS/OCMS_Toolkit"
Issues = "https://github.com/OxfordCMS/OCMS_Toolkit/issues"
Documentation = "https://github.com/OxfordCMS/OCMS_Toolkit"

[project.scripts]
ocms_toolkit = "ocmstoolkit.ocms_toolkit:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ocmstoolkit*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
ocmstoolkit = ["**/*.yml", "**/*.yaml", "**/*.txt"]

# Optional: Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

# Optional: isort configuration
[tool.isort]
profile = "black"
line_length = 88
